# datadash

./: .gitignore  CACHING.md  main.py  pyproject.toml  test_standardized_system.py
datadash/: utils.py
datadash/assets/: fonts.css
datadash/builders/: __init__.py  content.py  figure.py  figure_cache.py  frames.py  layout.py  plot.py  trace.py
datadash/converters/: __init__.py  plotly_converter.py
datadash/dashboard/: base.py  components.py  content.py  deltabot.py  simple.py
datadash/plots/: __init__.py  registry.py
datadash/standard/: __init__.py  properties.py  trace_constructor.py
datadash/themes/: default.yaml  futuristic.yaml  manager.py  palettes.py  palettes.yaml
datadash/themes/config/: default.yaml  example_overrides.yaml  palettes.yaml
