[project]
name = "datadash"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-bootstrap-components>=1.4.1",
    "dash>=2.9.2",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "uvicorn>=0.27.0",
    "werkzeug>=2.2.3",
    "orjson>=3.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datadash"]
